[package]
name = "js_moving"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_ecma_parser = "= 0.96.0"
swc_common = "0.17.18"
swc_ecma_ast = "= 0.72.0"
swc_ecma_visit = "= 0.58.0"
swc_ecma_codegen = "= 0.99.0"
rand = "0.8.5"
brotli = "3.3.0"
simhash = "0.2.0"
metaheuristics = "1.1.20"
time = "0.3.9"